@@ -1,4 +1,6 @@
 HEAD
+	+ Fixed external AD keytab generation
+	+ Fixed typo in EBox::LDAP::ExternalAD::externalServicesPrincipals
 	+ Migrate mailboxes when upgrading from Zentyal 3.2
 4.0.4
 	+ SysvolSync daemon now synchronize deleted GPOs.
